# clm

./: .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  =3.12.0  AGENTS.md  ARCHITECTURE_PROPOSAL.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV-NOTES.md  DOCKER_BUILD_OPTIMIZATION.md  E2E_LOGGING.md  FINAL_SUMMARY.md  LICENSE  MIGRATION_GUIDE_V0.3.md  MIGRATION_PLAN.md  MIGRATION_PLAN_FINAL.md  MIGRATION_PLAN_REVISED.md  MIGRATION_TODO.md  PHASE2_TESTING.md  PHASE7_DESIGN.md  PHASE7_SUMMARY.md  QUICK_BUILD.md  README.md  TODO.md  build-services.ps1  build-services.sh  check_jobs.py  cleanup_workers.py  clm_telemetry.db  codecov.yml  conftest.py  course-runtime-requirements.txt  diagnose_workers.py  docker-compose.legacy.yaml  docker-compose.yaml  push-services.ps1  (+15 more)
.claude/: ANALYSIS-SUMMARY.md  AUDIT_SUMMARY_CORE_PACKAGE.md  PHASE_1_COMPLETION_SUMMARY.md  (+13 more)
clx/: README.md  pyproject.toml
clx-cli/: pyproject.toml
clx-cli/src/clx_cli/: file_event_handler.py  git_dir_mover.py  main.py
clx-cli/tests/: README.md  test_cli_integration.py  test_cli_subprocess.py  test_cli_unit.py
clx-common/: pyproject.toml
clx-common/src/clx_common/: backend.py  base_classes.py  drawio_classes.py  notebook_classes.py  operation.py  plantuml_classes.py
clx-common/src/clx_common/backends/: dummy_backend.py  local_ops_backend.py
clx-common/src/clx_common/database/: db_operations.py  job_queue.py  schema.py
clx-common/src/clx_common/logging/: loguru_setup.py
clx-common/src/clx_common/messaging/: base_classes.py  correlation_ids.py  drawio_classes.py  notebook_classes.py  plantuml_classes.py  routing_keys.py
clx-common/src/clx_common/services/: subprocess_tools.py
clx-common/src/clx_common/utils/: copy_file_data.py  file.py  path_utils.py
clx-common/src/clx_common/workers/: __init__.py  pool_manager.py  worker_base.py  worker_executor.py
clx-common/tests/: correlation_ids_test.py  operation_test.py
clx-common/tests/backends/: local_ops_backend_test.py
clx-common/tests/database/: db_operations_test.py  test_job_queue.py  test_schema.py
clx-common/tests/utils/: path_utils_test.py
clx-common/tests/workers/: test_direct_integration.py  test_pool_manager.py  test_worker_base.py  test_worker_executor.py
clx-faststream-backend/: pyproject.toml
clx-faststream-backend/src/clx_faststream_backend/: correlation_ids.py  fast_stream_backend.py  faststream_backend.py  faststream_backend_handlers.py  sqlite_backend.py
clx-faststream-backend/tests/: correlation_ids_test.py  faststream_backend_handlers_test.py  faststream_backend_test.py  test_sqlite_backend.py
clx/src/clx/: __init__.py  backend.py  course.py  course_file.py  course_spec.py  dict_group.py  dir_group.py  operation.py  section.py  topic.py
clx/src/clx/cli/: __init__.py  git_dir_mover.py
clx/src/clx/core/: __init__.py  course_spec.py  section.py
clx/src/clx/core/course_files/: data_file.py  drawio_file.py  notebook_file.py  plantuml_file.py
clx/src/clx/core/operations/: convert_drawio_file.py
clx/src/clx/core/utils/: execution_utils.py  notebook_utils.py
clx/src/clx/course_files/: data_file.py  drawio_file.py  notebook_file.py  plantuml_file.py
clx/src/clx/infrastructure/: __init__.py  operation.py
clx/src/clx/infrastructure/backends/: __init__.py  faststream_backend.py  handlers.py  local_ops_backend.py  sqlite_backend.py
clx/src/clx/infrastructure/database/: job_queue.py  schema.py
clx/src/clx/infrastructure/messaging/: correlation_ids.py  drawio_classes.py  plantuml_classes.py
clx/src/clx/infrastructure/utils/: path_utils.py
clx/src/clx/infrastructure/workers/: pool_manager.py  progress_tracker.py
clx/src/clx/operations/: convert_drawio_file.py  convert_file.py  convert_plantuml_file.py  convert_source_output_file.py  copy_dict_group.py  copy_dir_group.py  copy_file.py  delete_file.py  process_notebook.py
clx/src/clx/utils/: div_uils.py  notebook_utils.py  path_utils.py  text_utils.py
clx/tests/: conftest.py  course_spec_test.py  course_test.py  file_test.py  notebook_utils_test.py  operation_test.py  test_e2e_course_conversion.py  text_utils_test.py  topic_test.py
clx/tests/cli/: conftest.py  test_cli_unit.py
clx/tests/core/: course_test.py
clx/tests/core/course_files/: data_file_test.py  notebook_file_test.py  plantuml_file_test.py
clx/tests/core/utils/: notebook_utils_test.py
clx/tests/course_files/: data_file_test.py  drawio_file_test.py  notebook_file_test.py  plantuml_file_test.py
clx/tests/infrastructure/database/: test_job_queue.py  test_schema.py
clx/tests/infrastructure/utils/: path_utils_test.py
clx/tests/test-data/course-specs/: test-spec-1.xml  test-spec-4.xml
clx/tests/test-data/slides/module_010_test_2/topic_100_a_topic_from_test_2/: slides_a_topic_from_test_2.py
clx/tests/utils/: path_utils_test.py  text_utils_test.py
faststream-backend/: pyproject.toml
faststream-backend/src/clx_faststream/: job.py
faststream-backend/src/clx_faststream/utils/: __init__.py
faststream-backend/tests/data/course-specs/: test-spec-1.xml  test-spec-2.xml
services/drawio-converter/: Dockerfile  base-requirements.txt  drawio-amd64-24.7.5.deb  entrypoint.sh  pyproject.toml
services/drawio-converter/src/drawio_converter/: __main__.py  drawio_converter.py  drawio_worker.py
services/notebook-processor/: Dockerfile  MANIFEST.in  base-requirements.txt  packages.yaml  pyproject.toml  test_nb.html
services/notebook-processor/src/nb/: __main__.py  notebook_processor.py  notebook_server.py  notebook_worker.py  output_spec.py  payload.py
services/notebook-processor/src/nb/templates_cpp/: cpp-logo.base64
services/notebook-processor/src/nb/templates_java/: java-logo.png.base64  java-logo.svg.base64  macros.j2
services/notebook-processor/src/nb/templates_typescript/: macros.j2
services/notebook-processor/src/nb/utils/: jupyter_utils.py  prog_lang_utils.py
services/plantuml-converter/: Dockerfile  pyproject.toml
services/plantuml-converter/src/plantuml_converter/: __main__.py  plantuml_converter.py  plantuml_worker.py
(+1733 files in other folders)
