[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clx-project"
version = "0.0.3"
authors = [
  { name="Dr. Matthias Hölzl", email="tc@xantira.com" },
]
description = "Project package for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "clx",
    "clx-cli",
    "clx-common",
    "clx-faststream-backend",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = []  # leave this empty to avoid including any packages at the root level

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: mark tests as slow to run",
    "broker: mark test that require a broker to run",
]
