[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clx"
version = "0.3.1"
description = "Coding-Academy Lecture Manager eXperimental - A course content processing system"
authors = [
    {name = "Dr. Matthias Hölzl", email = "tc@xantira.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Documentation",
]
keywords = ["education", "jupyter", "notebooks", "course", "content"]

dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.0.0",
    "platformdirs>=3.0.0",
    "click>=8.1.0",
    "watchdog>=6.0.0",
    "attrs>=25.4.0",
    "loguru>=0.7.0",
    "docker>=6.0.0",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
]
tui = [
    "textual>=0.50.0",
    "rich>=13.7.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
all = [
    "clx[dev,tui,web]",
]

[project.urls]
Homepage = "https://github.com/hoelzl/clx/"
Documentation = "https://github.com/hoelzl/clx/blob/main/README.md"
Repository = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[project.scripts]
clx = "clx.cli.main:cli"

[tool.hatch.version]
path = "src/clx/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clx"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: mark tests as slow to run",
    "integration: mark tests as integration tests requiring full worker setup",
    "e2e: mark tests as end-to-end tests that test full course conversion",
    "docker: mark tests that require Docker daemon (excluded by default)",
]
# Run fast unit tests by default, skip integration, slow, e2e, and docker tests
addopts = "-v -m 'not slow and not integration and not e2e and not docker'"

[tool.coverage.run]
source = ["src/clx"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["B", "F401", "F841"]  # Relax rules for tests

[tool.ruff.lint.isort]
known-first-party = ["clx"]
