[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clx"
version = "0.5.0"
description = "Coding-Academy Lecture Manager eXperimental - A course content processing system"
authors = [
    {name = "Dr. Matthias Hölzl", email = "tc@xantira.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Documentation",
]
keywords = ["education", "jupyter", "notebooks", "course", "content"]

dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.0.0",
    "platformdirs>=3.0.0",
    "click>=8.1.0",
    "watchdog>=6.0.0",
    "attrs>=25.4.0",
    "loguru>=0.7.0",
    "docker>=6.0.0",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# Worker dependencies - install these for direct execution mode
notebook = [
    "ipython~=8.26.0",
    "ipykernel~=6.29.5",
    "jinja2~=3.1.4",
    "jupytext>=1.16.4",
    "nbformat~=5.10.4",
    "nbconvert~=7.16.4",
    "matplotlib>=3.9.2",
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
    "scikit-learn>=1.5.1",
    "sqlalchemy>=2.0.32",
    "seaborn>=0.13.2",
    "toolz>=0.12.1",
    "skorch>=1.0.0",
    "scipy>=1.14.0",
    "cookiecutter",
]
plantuml = [
    "aiofiles~=24.1.0",
    "tenacity~=9.0.0",
]
drawio = [
    "aiofiles~=24.1.0",
    "tenacity~=9.0.0",
]
# Convenience groups
all-workers = [
    "clx[notebook,plantuml,drawio]",
]
# ML packages for advanced notebook features (PyTorch, FastAI, etc.)
ml = [
    "torch>=2.8.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.8.0",
    "fastai>=2.7",
    "transformers",
    "numba>=0.60.0",
]
# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
]
# TUI and Web
tui = [
    "textual>=0.50.0",
    "rich>=13.7.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
# Everything
all = [
    "clx[all-workers,ml,dev,tui,web]",
]

[project.urls]
Homepage = "https://github.com/hoelzl/clx/"
Documentation = "https://github.com/hoelzl/clx/blob/main/README.md"
Repository = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[project.scripts]
clx = "clx.cli.main:cli"

[tool.hatch.version]
path = "src/clx/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clx"]

[tool.hatch.build.targets.wheel.force-include]
"src/clx/workers/notebook/templates_python" = "clx/workers/notebook/templates_python"
"src/clx/workers/notebook/templates_cpp" = "clx/workers/notebook/templates_cpp"
"src/clx/workers/notebook/templates_csharp" = "clx/workers/notebook/templates_csharp"
"src/clx/workers/notebook/templates_java" = "clx/workers/notebook/templates_java"
"src/clx/workers/notebook/templates_typescript" = "clx/workers/notebook/templates_typescript"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: mark tests as slow to run",
    "db_only: mark tests that use real database but not real workers",
    "integration: mark tests as integration tests requiring full worker setup",
    "e2e: mark tests as end-to-end tests that test full course conversion",
    "docker: mark tests that require Docker daemon (excluded by default)",
]
# Run fast unit tests by default, skip db_only, integration, slow, e2e, and docker tests
addopts = "-v -m 'not slow and not db_only and not integration and not e2e and not docker'"
# Timeout configuration - prevents tests from hanging indefinitely
timeout = 600  # 10 minutes default timeout for all tests
timeout_method = "thread"  # Works better with asyncio tests

[tool.coverage.run]
source = ["src/clx"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["B", "F401", "F841", "UP038"]  # Relax rules for tests

[tool.ruff.lint.isort]
known-first-party = ["clx"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
