[metadata]
name = clm
version = 0.0.3
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = Coding-Academy Lecture Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/clm/clm
project_urls =
    Bug Tracker = https://github.com/hoelzl/clm/clm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    appdirs>=1.4
    click>=8.0
    jinja2>=3
    jupytext

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    clm = clm.__main__:cli