[metadata]
name = clm
version = 0.8.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = Coding-Academy Lecture Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/clm/clm
project_urls =
    Bug Tracker = https://github.com/hoelzl/clm/clm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    attrs>=23.1
    cattrs>=23.1
    click>=8.0
    configurator>=3.1
    cytoolz>=0.12
    jinja2>=3
    jupytext>=1.15
    nbconvert>=7.7
    networkx>=3.0
    platformdirs>=1.4
    tomli_w>=1.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    clm = clm.__main__:cli