[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clx-cli"
version = "0.0.1"
authors = [
  { name="Dr. Matthias Hölzl", email="tc@xantira.com" },
]
description = "Clx-common package for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "clx==0.0.1",
    "clx-faststream-backend==0.0.1",
    "click>=8.1.0",
    "watchdog>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[project.scripts]
clx = "clx_cli.main:run_main"

[tool.hatch.build.targets.wheel]
packages = ["src/clx_cli"]