[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "clx-cli"
version = "0.2.0"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" },
]
description = "Clx-common package for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "clx==0.2.0",
    "clx-faststream-backend==0.2.0",
    "click>=8.1.0",
    "watchdog>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[project.scripts]
clx = "clx_cli.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["clx_cli*"]
