[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "clx-cli"
version = "0.2.2"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" },
]
description = "Clx-common package for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "clx==0.2.2",
    "clx-faststream-backend==0.2.2",
    "click>=8.1.0",
    "watchdog>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[project.scripts]
clx = "clx_cli.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["clx_cli*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: integration tests with real backend (deselect with '-m \"not integration\"')",
    "slow: slow-running subprocess tests (deselect with '-m \"not slow\"')",
    "e2e: end-to-end subprocess tests (deselect with '-m \"not e2e\"')",
]
# Run fast unit tests by default, skip integration and slow tests
addopts = "-m 'not integration and not slow and not e2e'"
