[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clx-faststream-backend"
version = "0.0.2"
authors = [
  { name="Dr. Matthias Hölzl", email="tc@xantira.com" },
]
description = "CLX-Faststrea backend for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1",
    "clx-common==0.0.1",
    "faststream[rabbit]~=0.5.19",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clx_faststream_backend"]
