[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "clx-faststream-backend"
version = "0.1.1"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" },
]
description = "CLX-Faststrea backend for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=25.4.0",
    "clx-common==0.1.1",
    "faststream[rabbit]~=0.6.3",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["clx_faststream_backend*"]
