[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clx"
version = "0.0.1"
authors = [
  { name="Dr. Matthias Hölzl", email="tc@xantira.com" },
]
description = "Clx package for CLX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clx"]