[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-processor"
version = "0.2.2"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" },
]
description = "Notebook Processor for CLX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nb*"]

[tool.setuptools.package-data]
"nb" = [
    "templates_cpp/**/*",
    "templates_csharp/**/*",
    "templates_java/**/*",
    "templates_python/**/*",
    "templates_typescript/**/*",
]
