[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-processor"
version = "0.3.0"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" },
]
description = "Notebook Processor for CLX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "clx>=0.3.0",
    "ipython~=8.26.0",
    "ipykernel~=6.29.5",
    "jinja2~=3.1.4",
    "jupytext>=1.16.4",
    "nbformat~=5.10.4",
    "nbconvert~=7.16.4",
    "matplotlib>=3.9.2",
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
    "scikit-learn>=1.5.1",
    "sqlalchemy>=2.0.32",
    "seaborn>=0.13.2",
    "toolz>=0.12.1",
    "skorch>=1.0.0",
    "scipy>=1.14.0",
    "pydantic>=2.8.2",
    "cookiecutter",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nb*"]

[tool.setuptools.package-data]
"nb" = [
    "templates_cpp/**/*",
    "templates_csharp/**/*",
    "templates_java/**/*",
    "templates_python/**/*",
    "templates_typescript/**/*",
]
