[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantuml-converter"
version = "0.0.2"
authors = [
  { name="Dr. Matthias Hölzl", email="tc@xantira.com" },
]
description = "Plantuml-converter package for CLX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "clx-common==0.0.2",
    "faststream[rabbit]~=0.5.19",
]

[project.urls]
"Homepage" = "https://github.com/hoelzl/clx/"
"Bug Tracker" = "https://github.com/hoelzl/clx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plantuml_converter"]